# metarace-trackmeet

./: .gitignore  CHANGELOG.md  README.md  databridge.md  pyproject.toml
src/trackmeet/: __init__.py  aggregate.py  classification.py  databridge.py  eventdb.py  f200.py  hourrec.py  ittt.py  lapscore.py  ps.py  race.py  scbwin.py  sender.py  sprnd.py  uiutil.py
src/trackmeet/ui/: classification.ui  hourrec.ui  ittt.ui  ps.ui  ps_properties.ui  race.ui  sprnd.ui  trackmeet.ui
